@@ -1,0 +1,123 @@
+<!DOCTYPE html>
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this file,
+   - You can obtain one at http://mozilla.org/MPL/2.0/.  -->
+<html>
+<head>
+    <title>Admin - Perf-o-Matic</title>
+    <link rel="stylesheet" href="../css/reset.min.css" type="text/css" />
+    <link rel="stylesheet" href="../css/common.css" type="text/css" />
+    <link rel="stylesheet" href="../css/admin.css" type="text/css" />
+</head>
+<body>
+    
+<header id="header">
+    <h1>
+        <a href="/"><span id="logo">Perf-O-Matic</span></a>
+    </h1>
+    <nav>
+        <a href="/">Dashboard</a>
+        <a href="/graph.html">Custom Chart</a>
+    </nav>
+</header>
+
+<div id="summary">
+
+<section>
+<h2>Report logs</h2>
+<dl class="counts">
+    <dt>Total</dt>
+    <dd>{{ report_log_total }}</dd>
+    <dt>Committed</dt>
+    <dd>{{ report_log_committed }}</dd>
+</dl>
+
+<!-- FIXME: Merge /admin/report-logs here -->
+<a href="/admin/report-logs">Manage report logs</a>
+</section>
+
+<section id="branches">
+<h2>Branches</h2>
+<ul>
+    <li class="form">
+        <form method="POST" action="create/branch">
+        <dl>
+        <dt><label for="branch-key">Key</label></dt><dd><input type="text" id="branch-key" name="key"></dd>
+        <dt><label for="branch-name">Name</label></dt><dd><input type="text" id="branch-name" name="name"></dd>
+        </dl>
+        <button type="submit">Create</button>
+        </form>
+    </li>
+</ul>
+</section>
+
+<section id="platforms">
+<h2>Platforms</h2>
+<ul>
+    <li class="form">
+        <form method="POST" action="create/platform">
+        <dl>
+        <dt><label for="platform-key">Key</label></dt><dd><input type="text" id="platform-key" name="key"></dd>
+        <dt><label for="platform-name">Name</label></dt><dd><input type="text" id="platform-name" name="name"></dd>
+        </dl>
+        <button type="submit">Create</button>
+        </form>
+    </li>
+</ul>
+</section>
+
+<section id="builders">
+<h2>Builders</h2>
+<ul>
+    <li class="form">
+        <form method="POST" action="create/builder">
+        <dl>
+        <dt><label for="builder-name">Name</label></dt><dd><input type="text" id="builder-name" name="name"></dd>
+        <dt><label for="builder-password">Password</label></dt><dd><input type="password" id="builder-password" name="password"></dd>
+        </dl>
+        <button type="submit">Create</button>
+        </form>
+    </li>
+</ul>
+</section>
+
+<section id="tests">
+<h2>Tests</h2>
+<ul>
+    <li class="form">
+        <form method="POST" action="merge-tests">
+        <button type="submit">Merge</button>
+        <select name="merge"></select> into
+        <select name="into"></select>
+        </form>
+    </li>
+</ul>
+</section>
+</div>
+
+<div id="manual-submission">
+<section>
+<h2>Manual submission</h2>
+<form method="POST" action="/admin/report/">
+<textarea name="payload" rows="20" cols="100">
+</textarea><br>
+<button type="submit">Submit</button>
+</form>
+</section>
+<!-- FIXME: Merge admin/manual-submit.html here -->
+</div>
+
+<div id="errors">
+</div>
+
+<div id="footer">
+<a href="https://appengine.google.com/dashboard?app_id=webkit-perf">App Engine dashboard</a>
+</div>
+
+<script type="text/javascript" src="../jq/jquery-1.4.4.min.js"></script>
+<script type="text/javascript" src="../js/config.js"></script>
+<script type="text/javascript" src="../js/common.js"></script>
+<script type="text/javascript" src="../js/admin.js"></script>
+
+</body>
+</html>
